--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -8,10 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:m5stack-core-esp32]
+[env:nodemcu-32s]
 platform = espressif32
 board_build.partitions = no_ota.csv
-board = m5stack-core-esp32
+board = nodemcu-32s
 build_flags = 
     -DUSER_SETUP_LOADED 
     -DST7789_DRIVER 
@@ -19,20 +19,31 @@ build_flags =
     -DTFT_WIDTH=135
     -DTFT_HEIGHT=240
     -DTFT_SDA_READ      ; Read and write on the MOSI/SDA pin, no separate MISO pin
-    -DTFT_MOSI=23
+    -DTFT_MOSI=23       ; "NovelLife_SE" clone configuration
     -DTFT_SCLK=18
     -DTFT_DC=25         ; Data Command, aka Register Select or RS
     -DTFT_RST=26        ; Connect reset to ensure display initialises
     -DSPI_FREQUENCY=40000000
+    -DUSE_HSPI_PORT
+    -DFASTLED_ALL_PINS_HARDWARE_SPI
+    -DSMOOTH_FONT
+    ; -DLOAD_GLCD       ; Font 1. Original Adafruit 8 pixel font needs ~1820 bytes in FLASH
+    -DLOAD_FONT2        ; Font 2. Small 16 pixel high font, needs ~3534 bytes in FLASH, 96 characters
+    -DLOAD_FONT4        ; Font 4. Medium 26 pixel high font, needs ~5848 bytes in FLASH, 96 characters
+    ; -DLOAD_FONT6      ; Font 6. Large 48 pixel font, needs ~2666 bytes in FLASH, only characters 1234567890:-.apm
+    ; -DLOAD_FONT7      ; Font 7. 7 segment 48 pixel font, needs ~2438 bytes in FLASH, only characters 1234567890:.
+    ; -DLOAD_FONT8      ; Font 8. Large 75 pixel font needs ~3256 bytes in FLASH, only characters 1234567890:-.
     ; -DCORE_DEBUG_LEVEL=5
 
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-    TFT_eSPI = https://github.com/Bodmer/TFT_eSPI.git#2.3.70
+    ;; TFT_eSPI = https://github.com/Bodmer/TFT_eSPI.git#2.3.70
+    TFT_eSPI = https://github.com/Bodmer/TFT_eSPI.git#v2.5.0
+    RTClib = https://github.com/adafruit/RTClib.git#2.1.2    ; need for support of DS3231 part
     NTPClient@3.1.0
-    Timezone@1.2.4
+    jchristensen/Timezone@1.2.4
     Time = https://github.com/PaulStoffregen/Time#v1.6.1
-    Adafruit NeoPixel@1.8.5
-    ESP Async WebServer@1.2.3
+    fastled/FastLED
+    ;zeed/ESP Async WebServer@1.2.3
     ArduinoJson@5.13.4
