enable Async WebServer

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -34,6 +34,7 @@ build_flags =
     ; -DLOAD_FONT7      ; Font 7. 7 segment 48 pixel font, needs ~2438 bytes in FLASH, only characters 1234567890:.
     ; -DLOAD_FONT8      ; Font 8. Large 75 pixel font needs ~3256 bytes in FLASH, only characters 1234567890:-.
     ; -DCORE_DEBUG_LEVEL=5
+    -DDISABLE_ALL_LIBRARY_WARNINGS
 
 framework = arduino
 monitor_speed = 115200
@@ -45,5 +46,5 @@ lib_deps =
     jchristensen/Timezone@1.2.4
     Time = https://github.com/PaulStoffregen/Time#v1.6.1
     fastled/FastLED
-    ;zeed/ESP Async WebServer@1.2.3
+    zeed/ESP Async WebServer@1.2.3
     ArduinoJson@5.13.4
